Kubernetes/kustomize/overlays/production/media/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-ingress
  namespace: media 
spec:
  tls:
    secretName: media-certs
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bazarr.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: bazarr
          namespace: media
          port: bazarr
    - kind: Rule
      match: Host(`sonarr.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: sonarr
          namespace: media
          port: sonarr
    - kind: Rule
      match: Host(`jackett.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: mediavpn
          namespace: media
          port: jackett
    - kind: Rule
      match: Host(`radarr.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: radarr
          namespace: media
          port: radarr
    - kind: Rule
      match: Host(`qbit.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: mediavpn
          namespace: media
          port: qbit-web-ui
    - kind: Rule
      match: Host(`jellyfin.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: jellyfin
          namespace: media
          port: web-ui
    - kind: Rule
      match: Host(`library.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: kavita
          namespace: media
          port: book-ui
    - kind: Rule
      match: Host(`readarr.homelab.ezequielvalencia.com`)
      services:
        - kind: Service
          name: readarr
          namespace: media
          port: readarr
